# sentrysearch-UI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: paths.md  storage.md
natural-language-video-search/: SKILL.md
scripts/: download_models.py
sentrysearch/: chunker.py  cli.py  dashcam.proto  dashcam_pb2.py  embedder.py  gemini_embedder.py  local_embedder.py  metadata.py  overlay.py  paths.py  reranker.py  search.py  services.py  store.py  trimmer.py  webapp.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_embedder.py  test_local_embedder.py  test_metadata.py  test_search.py  test_services_rerank.py  test_store.py  test_trimmer.py  test_webapp.py
